--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.22.0",
-    "discord.js": "^13.1.0"
+    "discord.js": "^13.1.0",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
+    "@types/pg": "^8.6.1",
     "eslint": "^7.32.0",
     "typescript": "^4.4.2"
   }
