--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,11 @@ services:
     env_file:
       - ./.env
     user: 1000:1000
+  redis:
+    container_name: enrique_redis
+    image: redis
+    networks:
+      - database
 
 networks:
   database:
