--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "axios": "^0.21.4",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
-    "postgres": "^2.0.0-beta.8"
+    "postgres": "^2.0.0-beta.8",
+    "redis": "^3.1.2"
   },
   "devDependencies": {
+    "@types/redis": "^2.8.32",
     "eslint": "^7.32.0",
     "typescript": "^4.4.2"
   }
