--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
     "postgres": "^2.0.0-beta.8",
-    "redis": "^3.1.2"
+    "redis": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/redis": "^2.8.32",
